# optimization_learn

./: .clang-format  CMakeLists.txt
benchmark/: CMakeLists.txt  bench_gemm.cc  bench_layernorm.cc  bench_transpose.cc
include/gemm/: cpu_gemm.hpp  cuda_gemm.hpp
include/layernorm/: cpu_layernorm.hpp  cuda_layernorm.hpp
include/transpose/: cpu_transpose.hpp  cuda_transpose.hpp
include/utilities/: generate_matrix.hpp  read_csv.hpp  transpose_matrix.hpp
scripts/: generate_gemm_128x128_data.py  generate_gemm_128x256_data.py  generate_gemm_data.py
src/cuda/: CMakeLists.txt  cuda_gemm.cu  cuda_layernorm.cu  cuda_transpose.cu
test/: CMakeLists.txt  test_gemm.cc  test_generate_matrix.cc  test_layernorm.cc
